@@ -16,10 +16,12 @@ public:
    virtual void SetLightState(const std::string& sId,int unit,bool value);
    virtual float GetTemperature(const _t1WireDevice& device) const;
    virtual float GetHumidity(const _t1WireDevice& device) const;
+   virtual float GetPressure(const _t1WireDevice& device) const;
    virtual bool GetLightState(const _t1WireDevice& device,int unit) const;
    virtual unsigned int GetNbChannels(const _t1WireDevice& device) const;
    virtual unsigned long GetCounter(const _t1WireDevice& device,int unit) const;
    virtual int GetVoltage(const _t1WireDevice& device,int unit) const;
+   virtual float GetIlluminescence(const _t1WireDevice& device) const;
    // END : I_1WireSystem implementation
 
    static bool IsAvailable();
