@@ -15,8 +15,10 @@ public:
    virtual void SetLightState(const std::string& sId,int unit,bool value)=0;
    virtual float GetTemperature(const _t1WireDevice& device) const=0;
    virtual float GetHumidity(const _t1WireDevice& device) const=0;
+   virtual float GetPressure(const _t1WireDevice& device) const=0;
    virtual bool GetLightState(const _t1WireDevice& device,int unit) const=0;
    virtual unsigned int GetNbChannels(const _t1WireDevice& device) const=0;
    virtual unsigned long GetCounter(const _t1WireDevice& device,int unit) const=0;
    virtual int GetVoltage(const _t1WireDevice& device,int unit) const=0;
+   virtual float GetIlluminescence(const _t1WireDevice& device) const=0;
 };
